--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,19 @@
-cs50
-Flask
-Flask-Session
-requests
+cachelib==0.4.1
+certifi==2021.10.8
+charset-normalizer==2.0.6
+click==8.0.2
+cs50==7.0.2
+Flask==2.0.2
+Flask-Session==0.4.0
+greenlet==1.1.2
+gunicorn==20.1.0
+idna==3.2
+itsdangerous==2.0.1
+Jinja2==3.0.2
+MarkupSafe==2.0.1
+requests==2.26.0
+SQLAlchemy==1.4.25
+sqlparse==0.4.2
+termcolor==1.1.0
+urllib3==1.26.7
+Werkzeug==2.0.2
